@@ -40,7 +40,7 @@ int main(int argc, char *argv[])
 		// https://bugreports.qt-project.org/browse/QTBUG-32789
 		QFont::insertSubstitution(".Lucida Grande UI", "Lucida Grande");
 	}
-    */
+	*/
 #endif
 
 /* Note: Calling QSurfaceFormat::setDefaultFormat() before constructing the QApplication instance
