@@ -19,6 +19,7 @@ xflr5 v6.30 October 10th, 2016
 	- separated the GUI from the analysis engines
 	- added an option to hide flap moments in the operating view
 	- added a style property for foil points
+	- corrected and improved the calculation and display of analysis with sideslip - impact on results
 	- code cleaning
 	- bug corrections and minor enhancements
 
